# kys-cpp

./: .gitignore  CMakeLists.txt
cmake/: CMakeLists.txt  win.cmake
local/lib/x64/: opencc.lib
src/: Audio.cpp  BattleScene.cpp  Engine.cpp  GameUtil.h  MainScene.cpp  Script.cpp  Script.h  SubScene.cpp
